2010-03-16  Florent Rougon  <f.rougon@free.fr>

	* Release 2.11.

	* README: I thought I was adding a valuable precision in version 2.09
	when I changed "LGPL" to "LGPL version 2.1" in the README file (after
	looking at COPYING), but actually, the terms at the beginning of
	dialog.py are "either version 2.1 of the License, or (at your option)
	any later version". Sorry about that, fixed.

	* demo.py: use "if <test> <expr1> else <expr2>" expressions more
	often, since they are allowed in Python >= 2.5...

2010-03-16  Florent Rougon  <flo@via.ecp.fr>

	* Release 2.10.

	* dialog.py: add Peter Åstrand's modifications to deal with
	Xdialog's incompatibilities with respect to dialog:
	  - new "use_stdout" keyword argument for Dialog.__init__()
	  - factoring of final newline removals with the addition of
	    Dialog._strip_xdialog_newline().

	* dialog.py: add support for dialog options --no-label,
	--yes-label and --insecure (the last one not being so dangerous as
	the name seems to imply: "Makes the password widget friendlier but
	less secure, by echoing asterisks for each character"; BTW, kdm
	has a very nice way of handling this issue IMO: an option that
	echoes each character with x asterisks, where x = 3 IIRC).

2010-03-14  Florent Rougon  <flo@via.ecp.fr>

	* Release 2.09.

	* dialog.py: new supported widgets: editbox, inputmenu, mixedform,
	mixedgauge, pause, passwordform, progressbox.

	* demo.py: general improvements, such as:
	    - hopefully more helpful dialog when the user fails to select
	      a file in fselect;
	    - since actually selecting a file with this widget is already
	      boring after the second time, the widget can be exited by
	      pressing Esc or the Cancel button (in which case the parts
	      of the demo that need the file path will be skipped).
	    - replace a few calls to Dialog.scrollbox() by calls to
	      Dialog.msgbox(), since the latter provides nice automatic
	      line wrapping.
